--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -16,11 +16,12 @@
 }
 .informations-list li{
     list-style: none;
-    padding: 10px;
+    padding: 20px;
     color: #fff;
     margin: 10px;
     font-size: 17px;
     font-family: 'Roboto',serif;
+    text-decoration: none;
 
 }
 .informations-list li:hover{
@@ -119,7 +120,7 @@
 .menu.menuOpen{
     width: 150px;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.719);
+    background: rgba(0, 0, 0, 0.897);
     box-shadow: 10px 0px 69px 0px rgba(0,0,0,0.2);
     transition: 0.5s;
 
